# path_walker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
path_walker/: __init__.py  pattern.py  walker.py
tests/: test_pattern.py  test_walker.py
